# chat-bot-model

./: .gitignore  README.md  pyproject.toml  test.txt
chat_bot_model/: __init__.py  main.py  server.py  test.py
