[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat-bot-model"
version = "0.1.0"
description = "聊天机器人API服务器"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "modelscope",
    "torch==2.7.0",
    "transformers==4.52.4",
    "accelerate==1.8.1",
    "einops",
    "bitsandbytes",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "pydantic",
    "openai",
    "requests",

]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
chat-bot-server = "chat_bot_model.server:main"
chat-bot-test = "chat_bot_model.test:main"

[tool.hatch.build.targets.wheel]
packages = ["chat_bot_model"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"



[tool.uv.pip]
torch-backend = "auto"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "platform_system == 'Windows'" },
  { index = "pytorch-cu126", marker = "platform_system == 'Linux'" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "platform_system == 'Windows'" },
  { index = "pytorch-cu126", marker = "platform_system == 'Linux'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "platform_system == 'Windows'" },
  { index = "pytorch-cu126", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true